methylKit 0.9.4.3
--------------
NEW FUNCTIONS AND FEATURES

* new function methSeg() can segment methylation (methylRaw objects) and 
  differential methylation (methylDiff objects) profiles to segments.
  Associated function methSeg2bed() creates BED files from segments.
  see ?methSeg. Contributed by Arsene Wabo and Alexander Gosdschan.


methylKit 0.9.4.2
--------------
NEW FUNCTIONS AND FEATURES

* new tabix based classes methylRawDB, methylRawListDB, methylBaseDB, methylDiffDB and respective methods implemented. Tests are updated to check proper function in R CMD check. Contributed by Alexander Gosdschan.


methylKit 0.9.4.1
--------------
NEW FUNCTIONS AND FEATURES

* calculateMethDiff now supports basic overdispersion correction and multiple methods for pvalue-correction.
A test is added to check this in R CMD check. Contributed by Adrian Bierling.

* dataSim creates a methylBase object with simulated methylation data. A test is added to check this in R CMD check. Contributed by Adrian Bierling.


methylKit 0.9.4
--------------
IMPROVEMENTS AND BUG FIXES

* tileMethylCounts now works on methylBase objects, affected by BioC 3.0 upgrade. 
  A test is added to check this in R CMD check.


methylKit 0.9.3
--------------
IMPROVEMENTS AND BUG FIXES

* compatibility with BioC 3.0. Multiple BioC functions moved to other packages within BioC, 
  which broke some code and caused installation issues. Now this is fixed.
* data.table::merge is now stable when all=TRUE. Removed my(altuna) version of data.table::merge 
  the code base.


methylKit 0.9.2.5
--------------
IMPROVEMENTS AND BUG FIXES

* calculateDiffMeth slim=FALSE argument works correctly when there are multiple 
  samples per group. 


methylKit 0.9.2.4
--------------
IMPROVEMENTS AND BUG FIXES

* install_github() now works correctly. Removed blank lines at the end of 
  DESCRIPTION file.

* calculateDiffMeth and tileMethylCounts now works correctly,