@@ -3,3 +3,4 @@ context("Tidy Up")
 
 unlink(x = "methylDB/",recursive = TRUE)
 unlink("Rplots.pdf")
+unlink("test.bed")
